# tt-rp2040-firmware

./: CMakeLists.txt  README.md  git_revision.cmake
.github/workflows/: build.yaml
src/: clkgen.c  clkgen.h  ctrl.c  ctrl.h  git_version.c.in  git_version.h  main.c  pins.h
